2007-09-01  Jürg Billeter  <j@bitron.ch>

	* vala/valalockable.vala, gobject/valacodegenerator.vala,
	  gobject/valacodegeneratorassignment.vala,
	  gobject/valacodegeneratorclass.vala,
	  gobject/valacodegeneratorinvocationexpression.vala,
	  gobject/valacodegeneratormemberaccess.vala,
	  gobject/valacodegeneratormethod.vala, compiler/valacompiler.vala:
	  fix implicit casts to support non-GObject classes, enable run-time
	  checks by default, fixes bug 472446

2007-09-01  Mathias Hasselmann  <mathias.hasselmann@gmx.de>

	* vapi/packages/pango/pango.metadata: mark
	  pango_glyph_item_letter_space.log_attrs and
	  pango_get_log_attrs.log_attrs as arrays
	* vapi/pango.vala: regenerated

2007-09-01  Mathias Hasselmann  <mathias.hasselmann@gmx.de>

	* vapi/packages/gtk+-2.0/gtk+-2.0.metadata:
	  gtk_init_with_args.entries as array
	* vapi/packages/pango/pango.metadata:
	  mark PangoLogAttr as value type
	* vapi/gtk+-2.0.vala, vapi/pango.vala:
	  regenerated

2007-09-01  Jürg Billeter  <j@bitron.ch>

	* vala/valaclass.vala, vala/valadatatype.vala, vala/valainterface.vala,
	  vala/valasemanticanalyzer.vala, gobject/valacodegenerator.vala,
	  gobject/valacodegeneratorassignment.vala: let DataType.is_subtype_of
	  return true if the specified type is the same

2007-09-01  Jürg Billeter  <j@bitron.ch>

	* doc/vala/types.xml: add introduction to data types

2007-09-01  Jürg Billeter  <j@bitron.ch>

	* vala/valatrystatement.vala: visit finally body, fixes bug 467919

2007-09-01  Jürg Billeter  <j@bitron.ch>

	* configure.ac: add xsltproc as optional dependency
	* doc/vala/: add initial structure for the Vala Reference Manual, will
	  be built and installed if xsltproc is available
	* tests/hello.exp, tests/hello.vala: add hello world test case
	* doc/Makefile.am, tests/Makefile.am: updated

2007-09-01  Jürg Billeter  <j@bitron.ch>

	* vala/valasemanticanalyzer.vala: check arguments of methods with
	  ellipsis parameters

2007-08-31  Jürg Billeter  <j@bitron.ch>
